force-app/main/default/objects/Requirement__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date the milestone is completed</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>