force-app/main/default/objects/Requirement__c/fields/Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>Funding_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relationship to the Funding Request.</description>
    <label>Funding Request</label>
    <referenceTo>Funding_Request__c</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>