force-app/main/default/objects/Requirement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter of Intent</fullName>
            </value>
            <value>
                <fullName>Preliminary Application</fullName>
            </value>
            <value>
                <fullName>Final Application</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Panel Review</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>