force-app/main/default/objects/Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Funding_Request__c</columns>
    <columns>Assigned__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>