force-app/main/default/objects/Requirement__c/listViews/Open_Milestones.listView-meta.xml
<ListView>
    <fullName>Open_Milestones</fullName>
    <columns>NAME</columns>
    <columns>Funding_Request__c</columns>
    <columns>Assigned__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,In Progress,Delayed</value>
    </filters>
    <label>Open Milestones</label>
</ListView>