force-app/main/default/objects/Requirement__c/listViews/Recently_Completed_Milestones.listView-meta.xml
<ListView>
    <fullName>Recently_Completed_Milestones</fullName>
    <columns>NAME</columns>
    <columns>Funding_Request__c</columns>
    <columns>Assigned__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Completed_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>Recently Completed Milestones</label>
</ListView>